kubernets/ingress/ingress-tls-rewrite.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openapi-order-tjmetroapp
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
    - hosts:
        - openapi.mall.tjmetroapp.com
      secretName: openapi-tjmetroapp-tls
  rules:
    - host: openapi.mall.tjmetroapp.com
      http:
        paths:
          - pathType: Prefix
            path: /trade/v1/order(/|$)(.*)
            backend:
              service:
                name: openapi-order
                port:
                  number: 80
