kubernets/ingress/ingress-tls-websocket.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ytj-pos-notify
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Upgrade "websocket";
      proxy_set_header Connection "Upgrade";
spec:
  tls:
    - hosts:
        - posmq.ytj.msjiay.com
      secretName: ytj-pos-notify-tls
  rules:
    - host: posmq.ytj.msjiay.com
      http:
        paths:
          - path:
            backend:
              serviceName: ytj-pos-notify
              servicePort: 80
