kubernets/ingress/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: unionpay-notice
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
#    nginx.ingress.kubernetes.io/auth-type: basic
#    nginx.ingress.kubernetes.io/auth-secret: app-test
#    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
#    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
        - unionpay-notice.msjiay.com
      secretName: unionpay-notice
  rules:
    - host: unionpay-notice.msjiay.com
      http:
        paths:
          - path: /
            backend:
              serviceName: ytj-app
              servicePort: 80
          - path: /sock
            backend:
              serviceName: ytj-app-notify
              servicePort: 80
